--- a/pages/streaming.html
+++ b/pages/streaming.html
@@ -7,6 +7,6 @@
         
         <body>
             <h2>Nosso stream de vídeo</h2>
-            <audio src = "http://localhost:3000/audio" controls ="true"></audio>
+            <audio src = "/audio" controls ="true"></audio>
         </body>
     </html>
